@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Tue, 08 Oct 2024 12:15:12 +0800</lastBuildDate>
+  <lastBuildDate>Tue, 08 Oct 2024 12:17:28 +0800</lastBuildDate>
 
   <item>
   <title>G-Dragon終於打破沉默！將在《劉QUIZ ON THE BLOCK》首次亮相，分享BIGBANG歲月、毒品風波和音樂復出計劃</title>
@@ -67,5 +67,10 @@
   <link>https://www.famechos.me/news/睽違十年！2NE1重返舞台狂掀歡呼聲　亞洲巡迴演唱會即將展開/</link>
   <description>睽違十年！2NE1重返舞台狂掀歡呼聲　亞洲巡迴演唱會即將展開</description>
   <pubDate>Tue, 08 Oct 2024 12:15:12 +0800</pubDate>
+</item><item>
+  <title>BLACKPINK成員Jennie新單曲《Mantra》能否扭轉韓國女歌手低迷狀態？</title>
+  <link>https://www.famechos.me/news/BLACKPINK成員Jennie新單曲《Mantra》能否扭轉韓國女歌手低迷狀態？/</link>
+  <description>BLACKPINK成員Jennie新單曲《Mantra》能否扭轉韓國女歌手低迷狀態？</description>
+  <pubDate>Tue, 08 Oct 2024 12:17:28 +0800</pubDate>
 </item></channel>
 </rss>
