@@ -78,4 +78,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/BLACKPINK成員Jennie新單曲《Mantra》能否扭轉韓國女歌手低迷狀態？/</ns0:loc>
+    <ns0:lastmod>2024-10-08T12:17:28+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
